# gnu-parallel

./: .gitignore  10seconds_install  CREDITS  Makefile.am  Makefile.in  NEWS  README  bootstrap  citation-notice-faq.txt  configure  configure.ac
.reuse/: dep5
doc/: FUTURE_IDEAS  boxplot-overhead  citation-notice-faq.txt  haikus  pod2savannah_publicinfo  promo  release_new_version
packager/0install/: check  update
packager/centos/: install-parallel-centos-5.sh
packager/debian/: Makefile
packager/obs/: Makefile
packager/releasescripts/: updateversion
src/: Makefile.am  Makefile.in  christmastree  env_parallel  env_parallel.ash  env_parallel.bash  env_parallel.csh  env_parallel.dash  env_parallel.fish  env_parallel.ksh  env_parallel.mksh  env_parallel.pdksh  env_parallel.pod  env_parallel.sh  env_parallel.tcsh  env_parallel.zsh  niceload  niceload.pod  parallel  parallel.pod  parallel_alternatives.pod  parallel_book.pod  parallel_cheat.fodt  parallel_design.pod  parallel_examples.pod  parallel_tutorial.pod  parcat.pod  parset  parset.pod  parsort  pod2graph  pod2rst-fix  sem.pod  sql  testurls
src/sphinx/: Makefile
testsuite/: Fixed.sh  Makefile  Portable.sh  REQUIREMENTS  Start.sh
testsuite/input-files/: testdir.tar.bz2
testsuite/tests-to-run/: niceload01.sh  niceload02.sh  niceload03.sh  niceload04.sh  parallel-android.sh  parallel-centos3.sh  parallel-freebsd.sh  parallel-install.sh  parallel-local-0.3s.sh  parallel-local-100s.sh  parallel-local-10s.sh  parallel-local-1s.sh  parallel-local-300s.sh  parallel-local-30s.sh  parallel-local-3s.sh  (+74 more)
(+88 files in other folders)
